# copy-drone-software

./: .gitignore  README.md  detection_params.npy
Design Package Documentation/: Final Design Package Table of Contents.docx  XPRIZE Wildfire Team GitHub URL.docx
Design Package Documentation/Assembly Instructions and Part Renders/: GENERAL Assembly Instructions.docx
Design Package Documentation/Assembly Instructions and Part Renders/High Altitude Assembly Solidworks Files/: 91290A303_Alloy Steel Socket Head Screw.SLDPRT  camera.SLDPRT  camerachip.SLDPRT  highaltitudedroneassembly.SLDASM  versionfinalcameramount.SLDPRT
Design Package Documentation/Assembly Instructions and Part Renders/Low Altitude Assembly Solidworks Files/: 90592A085_Steel Hex Nut.SLDPRT  91290A303_Alloy Steel Socket Head Screw.SLDPRT  92095A184_Button Head Hex Drive Screw.SLDPRT  Camera.SLDPRT  (+5 more)
Design Package Documentation/System Overview Diagrams/: ART-008 System Progress Overview with Header.docx  Links to Original System Overview Documents (Editable).docx
sim_data/: camera_timestamps.npy  clean_odometry.npy  noisy_odometry.npy
src/img_capture/: CMakeLists.txt
src/img_capture/launch/: image.launch.py  live.launch.py
src/img_capture/scripts/: auto_control.py  drop_mech.py  flight_logger.py  high_alt_filter.py  hot_spot_viewer.py  kmeans.py  live_feedback.py  low_alt_filter.py  odometry_publisher.py  save_log_test.py  sim_flight_publisher.py
src/img_capture/src/: seekcamera_publisher.cpp
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
(+37 files in other folders)
